<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ku.iui.imotion.socceruserstudy.MainActivity">

    <ku.iui.imotion.socceruserstudy.CanvasView
        android:layout_width="1100dp"
        android:layout_height="600dp"
        android:id="@+id/queryCanvas"
        android:background="@drawable/soccerfield"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_canvas"
        android:id="@+id/clearButton"
        android:layout_below="@+id/queryCanvas"
        android:layout_alignLeft="@+id/queryCanvas"
        android:layout_alignStart="@+id/queryCanvas"
        android:onClick="clearCanvas"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/highlight_title"
        android:id="@+id/highlightTitle"
        android:layout_below="@+id/queryCanvas"
        android:layout_toEndOf="@+id/clearButton"
        android:textColor="#000000"
        android:layout_alignBaseline="@+id/clearButton"
        android:layout_toRightOf="@+id/clearButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highlight_red"
        android:id="@+id/highlightRed"
        android:background="@android:color/holo_red_dark"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/highlightTitle"
        android:layout_toRightOf="@+id/highlightTitle"
        android:layout_toEndOf="@+id/highlightTitle"
        android:layout_alignBaseline="@+id/highlightTitle"
        android:layout_marginLeft="3dp"
        android:onClick="changeColor" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highlight_yellow"
        android:id="@+id/highlightYellow"
        android:layout_alignTop="@+id/highlightRed"
        android:layout_toRightOf="@+id/highlightRed"
        android:layout_toEndOf="@+id/highlightRed"
        android:layout_alignBaseline="@+id/highlightTitle"
        android:background="#ffff00"
        android:layout_marginLeft="3dp"
        android:onClick="changeColor" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highlight_blue"
        android:id="@+id/highlightBlue"
        android:layout_alignTop="@+id/highlightTitle"
        android:layout_toRightOf="@+id/highlightYellow"
        android:layout_toEndOf="@+id/highlightYellow"
        android:layout_alignBaseline="@+id/highlightTitle"
        android:layout_marginLeft="3dp"
        android:textColor="#ffffff"
        android:background="@android:color/holo_blue_dark"
        android:onClick="changeColor" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highlight_purple"
        android:id="@+id/highlightPurple"
        android:layout_alignTop="@+id/highlightTitle"
        android:layout_toRightOf="@+id/highlightBlue"
        android:layout_toEndOf="@+id/highlightBlue"
        android:layout_marginLeft="3dp"
        android:layout_alignBaseline="@+id/highlightTitle"
        android:background="@android:color/holo_purple"
        android:textColor="#ffffff"
        android:onClick="changeColor" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highlight_brown"
        android:id="@+id/highlightBrown"
        android:layout_alignTop="@+id/highlightTitle"
        android:layout_toRightOf="@+id/highlightPurple"
        android:layout_toEndOf="@+id/highlightPurple"
        android:layout_marginLeft="3dp"
        android:layout_alignBaseline="@+id/highlightTitle"
        android:background="#700606"
        android:textColor="#ffffff"
        android:onClick="changeColor" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawingmode"
        android:id="@+id/drawingMode"
        android:layout_alignTop="@+id/highlightTitle"
        android:layout_toRightOf="@+id/highlightBrown"
        android:layout_toEndOf="@+id/highlightBrown"
        android:layout_marginLeft="3dp"
        android:layout_alignBaseline="@+id/highlightTitle"
        android:background="#e6d6d6"
        android:onClick="changeColor" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/stopRecording"
        android:layout_alignTop="@+id/highlightTitle"
        android:layout_toRightOf="@+id/drawingMode"
        android:layout_toEndOf="@+id/drawingMode"
        android:onClick="stopRecording" />

</RelativeLayout>
