<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ku.iui.imotion.socceruserstudy.ConnectionStatusActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/applicationstate"
        android:id="@+id/connectionStHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="60dp"
        android:layout_marginTop="100dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_tablet"
        android:id="@+id/otherTabletCheck"
        android:textSize="30dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/connectionStHeader"
        android:layout_centerHorizontal="true"
        android:clickable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:id="@+id/next2"
        android:textSize="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="thirdStep" />
</RelativeLayout>
